hphp/hack/test/typecheck/reified_generics/static_method_call_through_reified_generic.php
<?hh
// Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.

function test<reify T as arraykey>(): void {
  T::foo();
}
